[package]
name = "linea"
version = "0.8.0"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Linear Algebra: Vectors and Matrices"
repository = "https://github.com/strake/linea.rs"
documentation = "https://docs.rs/linea/"

[dependencies]
typenum = { version = "1.3", features = ["no_std"] }
dimensioned = { version = "0.6", optional = true }
generic-array = { version = "0.2.1", features = ["no_std"] }
idem = "0.1"
glium = { version = "0.16", optional = true }
quickcheck = { version = "0.4", optional = true }
radical = "0.1"

[dev-dependencies]
quickcheck = "0.4"
quickcheck_macros = "0.4.2"
