[package]
name = "linea"
version = "0.9.3"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Linear Algebra: Vectors and Matrices"
repository = "https://github.com/strake/linea.rs"
documentation = "https://docs.rs/linea/"

[dependencies]
typenum = { version = "1.3", features = ["no_std"] }
dimensioned = { version = "0.6", optional = true }
generic-array = "0.9"
glium = { version = "0.16", optional = true }
idem = "0.4"
quickcheck = { version = "0.4", optional = true }
radical = "0.1"

[dev-dependencies]
quickcheck = "0.4"
quickcheck_macros = "0.4.2"
